<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/cancel_img"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/cancel_img"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:text="@string/cancel_popup_txt"
        android:textAllCaps="false"
        android:textColor="@color/whiteText" />

    <LinearLayout
        android:layout_below="@id/cancel_btn"
        android:id="@+id/dialog_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dialog_color"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dialog_text_title"
            android:textColor="@color/whiteText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/dialog_text_content"
            android:textColor="@color/whiteText" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/dialog_btn_dialing"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/main_btn_ringing"
            android:drawableStart="@drawable/main_btn_ringing"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/dialog_text_calling"
            android:textAllCaps="false"
            android:textColor="@color/whiteText" />

    </LinearLayout>
</RelativeLayout>
